# mISDN

./: .gitignore  CHANGES  Makefile  Makefile.am  Makefile.in  Makefile.module  Makefile.standalone  README  README.misdn-init  Rules.make.ext  acinclude.m4  add.config  checkall.sh  checkout-branch.sh  checkout-mISDN_1_1.sh  checkout-portability.sh  configure  configure.ac  doclean.sh  km_mISDN.spec  mISDN.cfg.default  mISDN.modprobe.d  makelib.sh  memdebug.diff  misdn-init  sed.clean  std2kern  stddiff
config/: Makefile  README.mISDN  mISDN  mISDN.conf  mISDN.conf.avmfritz.xsl  mISDN.conf.bnx.xsl  mISDN.conf.hfcmulti.xsl  mISDN.conf.hfcpci.xsl  mISDN.conf.inc.xsl  mISDN.conf.l1oip.xsl  mISDN.conf.mISDN_debugtool.xsl  mISDN.conf.mISDN_dsp.xsl  mISDN.conf.singlepci.xsl  mISDN.conf.xsl
patches/: 0001-net-Pass-kern-from-net_proto_family.create-to-sk_all.patch  0006-rdtscl-was-removed-in-mainline.patch  0655-class_device-is-gone-in-2.6.26.patch  0735-mISDN-Say-hello-to-sys-class-mISDN.patch  0857-net-pass-kern-to-net_proto_family-create-function.patch  0858-net-Make-setsockopt-optlen-be-unsigned.patch  0859-net-mark-net_proto_ops-as-const.patch  Add_AF_ISDN  Add_list_first_entry.patch  Add_pr_warn.patch  Drivers-isdn-remove-__dev-attributes.patch  Fix_class_find_device_class_for_each_device  Revert_2.6.19_changes  Revert_2.6.20_changes  Revert_2.6.21_changes  Revert_2.6.22_changes  Revert_2.6.24_changes  Revert_3.19-51f3d02b98.patch  Revert_3.19-6ce8e9ce5.patch  Revert_397789187ceda551f213d3a23a71c27be8860546.patch  Revert_4.1-1b784140474e4.patch  Revert_4.11_2d96f879ba161948db85f03c52d69933273f62d1.patch  Revert_4.15_86cb30ec07cdc78ad94d94bb3756c7c2d46968b9.patch  Revert_4.15_c509a8229d8df29c8308c4b03a1f6d69eb287acd.patch  Revert_4.15_e313ac12eb13a9738116192848695da54c38b1ae.patch  Revert_4.15_e4dca7b7aa08b22893c45485d222b5807c1375ae.patch  Revert_4.15_e99e88a9d2b067465adaa9c111ada99a041bef9a.patch  Revert_4.15_xhfc_timer_setup.patch  Revert_4.16_956a27ecfad51048c7614ec256c638f166bd8db3.patch  Revert_4.16_a9a08845e9acbd224e4ee466f5c1275ed50054e8.patch  Revert_4.16_afc9a42b7464f76e1388cad87d8543c69f6f74ed.patch  Revert_4.17_9b2c45d479d0fb8647c9e83359df69162b5fbe5f.patch  Revert_4.18_6396bb221514d2876fd6dc0aa2a1f240d99b37bb.patch  Revert_4.19_16630f54fe28fb50f95f2911dc7a3b4bf137305f.patch  Revert_4.20-9206eb0bc5679d06d2f54b9db86fe2b9a55e07e4.patch  Revert_4.20_aa563d7bca6e882ec2bdae24603c8f016401a144.patch  Revert_5.0_8d008e64a2ebe6567c3f5e048b05842a0297350b.patch  Revert_5.1_b54ecf17eefcd10a68fe7e0f2bf594f8e88e4380.patch  Revert_5.5_257daba4eb7f2b78c5b3d77443985c6c53560c73.patch  Revert_5.5_2e86d4769a57c8e71894edd9013ab9af17f54a8d.patch  (+27 more)
scripts/: apply_patch_series  check_mISDN_cfg  find_CONFIG_MISDN
series/: series_2.6.18  series_2.6.19  series_2.6.20  series_2.6.21  series_2.6.22  series_2.6.23  series_2.6.24  series_2.6.25  series_2.6.26  series_2.6.27  series_2.6.28  series_2.6.29  series_2.6.30  series_2.6.31  series_2.6.32  series_2.6.33  series_2.6.34  series_2.6.35  series_2.6.36  series_2.6.37  series_2.6.38  series_2.6.39  series_3.0  series_3.1  series_3.10  series_3.11  series_3.12  series_3.13  series_3.14  series_3.15  series_3.16  series_3.17  series_3.18  series_3.19  series_3.2  series_3.3  series_3.4  (+31 more)
(+234 files in other folders)
