#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([mISDNkernel], [1.2.21], [i4ldeveloper@listserv.isdn4linux.de])
AC_CONFIG_SRCDIR([drivers/isdn/mISDN/core.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Werror foreign])

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_SED
AC_PROG_GREP
AC_PROG_AWK
AC_PROG_FIND
AC_PROG_DIFF
AC_PROG_PATCH
# Checks for libraries.

# Checks for header files.

# Checks for library functions.

AC_CONFIG_FILES([
	Makefile
	standalone/Makefile
])
AC_OUTPUT
